--- a/index1.html
+++ b/index1.html
@@ -5,24 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
     <title>Document</title>
 </head>
 <body>
     <div class="progressBar">
-        <div class="step1 active">1</div>
-        <div class="connector1"></div>
-        <div class="step2">2</div>
-        <div class="connector2"></div>
-        <div class="step3">3</div>
-        <div class="connector3"></div>
-        <div class="step4">4</div>
+        <div class="step active">1</div>
+        <div class="connector"></div>
+        <div class="step">2</div>
+        <div class="connector"></div>
+        <div class="step">3</div>
+        <div class="connector"></div>
+        <div class="step">4</div>
     </div>
     <div class="btnContainer">
         <button class="prev">Prev</button>
         <button class="next">Next</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script1.js"></script>
 </body>
 </html>
