--- a/advancedDOM.html
+++ b/advancedDOM.html
@@ -142,7 +142,10 @@
       <div class="operations">
         <div class="operations__tab-container">
           <button
-            class="btn operations__tab operations__tab--1 operations__tab--active"
+            class="
+              btn
+              operations__tab operations__tab--1 operations__tab--active
+            "
             data-tab="1"
           >
             <span>01</span>Instant Transfers
@@ -155,7 +158,11 @@
           </button>
         </div>
         <div
-          class="operations__content operations__content--1 operations__content--active"
+          class="
+            operations__content
+            operations__content--1
+            operations__content--active
+          "
         >
           <div class="operations__icon operations__icon--1">
             <svg>
@@ -217,6 +224,7 @@
       </div>
 
       <div class="slider">
+        <!--
         <div class="slide slide--1">
           <div class="testimonial">
             <h5 class="testimonial__header">Best financial decision ever!</h5>
@@ -276,8 +284,8 @@
             </address>
           </div>
         </div>
-
-        <!-- <div class="slide"><img src="img/img-1.jpg" alt="Photo 1" /></div>
+      -->
+        <div class="slide"><img src="img/img-1.jpg" alt="Photo 1" /></div>
         <div class="slide"><img src="img/img-2.jpg" alt="Photo 2" /></div>
         <div class="slide"><img src="img/img-3.jpg" alt="Photo 3" /></div>
         <div class="slide"><img src="img/img-4.jpg" alt="Photo 4" /></div> -->
